--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ cache: pip
 install:
   - pip install -r requirements.txt
 script: 
-  - python -m unittest discover -p 'test_*.py' -t tests/
+  - python -m unittest discover -p 'test_*.py' tests/
